[gd_scene load_steps=14 format=3 uid="uid://dr038k11r1a4h"]

[ext_resource type="Script" path="res://game/scripts/interactable/doors/normal_door.gd" id="1_62071"]
[ext_resource type="AudioStream" uid="uid://dj10gsc4fvlea" path="res://assets/audio/sfx/S_Sliding_Future_Door_Open.wav" id="2_cegxl"]
[ext_resource type="Script" path="res://game/scripts/object_components/powered.gd" id="2_of6uv"]
[ext_resource type="AudioStream" uid="uid://2sruocolw06x" path="res://assets/audio/sfx/S_Sliding_Future_Door_Close.wav" id="3_6x5wx"]
[ext_resource type="AudioStream" uid="uid://b6aoqryx4rx2x" path="res://assets/audio/sfx/S_Door_Locked.wav" id="4_lowci"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7u56q"]
size = Vector3(0.15, 3, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gvcxv"]
albedo_color = Color(0.504, 0.5733, 0.63, 1)

[sub_resource type="BoxMesh" id="BoxMesh_horhb"]
material = SubResource("StandardMaterial3D_gvcxv")
size = Vector3(0.15, 3, 2)

[sub_resource type="Animation" id="Animation_ofxnh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}

[sub_resource type="Animation" id="Animation_6vi6h"]
resource_name = "close_door"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 4.5, 0), Vector3(0, 1.5, 0)]
}

[sub_resource type="Animation" id="Animation_72qpt"]
resource_name = "open_door"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 4.5, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_omime"]
_data = {
"RESET": SubResource("Animation_ofxnh"),
"close_door": SubResource("Animation_6vi6h"),
"open_door": SubResource("Animation_72qpt")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_c2u1h"]
height = 3.0
radius = 2.0

[node name="NormalDoor" type="StaticBody3D"]
collision_layer = 5
collision_mask = 0
script = ExtResource("1_62071")
locked = true
open_sound = ExtResource("2_cegxl")
close_sound = ExtResource("3_6x5wx")
locked_sound = ExtResource("4_lowci")
prompt_message = "Open Door"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_7u56q")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("BoxMesh_horhb")
skeleton = NodePath("../..")

[node name="Powered" type="Node" parent="."]
script = ExtResource("2_of6uv")

[node name="Doorframe" type="CSGCombiner3D" parent="."]
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="Doorframe"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0)
size = Vector3(0.2, 3.5, 3)

[node name="CSGBox3D2" type="CSGBox3D" parent="Doorframe"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.014, 1.4, 0)
operation = 2
size = Vector3(0.37, 2.8, 1.8)

[node name="Lightbox" type="CSGCombiner3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.228294, 3.10114, -0.000794649)

[node name="CSGBox3D" type="CSGBox3D" parent="Lightbox"]
size = Vector3(0.3, 0.3, 0.3)

[node name="CSGBox3D2" type="CSGBox3D" parent="Lightbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0405762, 0)
operation = 2
size = Vector3(0.2, 0.281152, 0.2)

[node name="OmniLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.24357, 3.18143, 0.000773907)
light_color = Color(0.747713, 0.612533, 0, 1)
light_energy = 0.2

[node name="Audio" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_omime")
}

[node name="CloseRange" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="CloseRange"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("CylinderShape3D_c2u1h")

[connection signal="interacted" from="." to="." method="_on_interacted"]
[connection signal="body_exited" from="CloseRange" to="." method="_on_close_range_body_exited"]
